--- a/iaroapp/templates/index.html
+++ b/iaroapp/templates/index.html
@@ -56,7 +56,7 @@
                 </div>
                 <div class="card-body text-center py-1">
                     <div class="d-flex justify-content-center">
-                        <a class="btn bg-gradient-primary mt-3 w-100""
+                        <a class="btn bg-gradient-primary mt-3 w-100"
                             href="/procedures/opening">
                             Check tasks
                         </a>
@@ -80,7 +80,7 @@
                 </div>
                 <div class="card-body text-center py-1">
                     <div class="d-flex justify-content-center">
-                        <a class="btn bg-gradient-primary mt-3 w-100""
+                        <a class="btn bg-gradient-primary mt-3 w-100"
                             href="/procedures/closing">
                             Check tasks
                         </a>
@@ -332,7 +332,7 @@
             </div>
         </div>
     </div>
-
+</div>
 
 
 
