refactor task branch filtering, ui adjustments

--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -9,7 +9,7 @@
 {% block widgets %}
 <div class="d-flex justify-content-between flex-wrap gap-2">
     {% if user.is_superuser or user.is_staff %}
-    <a class="btn bg-gradient-primary" href="/tasks/add{% if branch %}?branch={{ branch }}{% endif %}">
+    <a class="btn mb-0 bg-gradient-primary" href="/tasks/add{% if branch %}?branch={{ branch }}{% endif %}">
         Add task
     </a>
     {% endif %}
@@ -54,58 +54,59 @@
                             {% for form in formset %}
                             {% if form.instance.id %}
                                 <tr class="entry" {% if form.instance.done_for_branch %}
-                                                 data-bs-toggle="tooltip" data-bs-placement="top" title="Done"
-                                                 {% endif %}>
-                                <td>
-                                    <div class="d-flex justify-content-center responsive__mobile-2" >
-                                        <div class="form-check" >
-                                            <div class="checkbox-wrapper {% if form.instance.done_for_branch %} checked-tooltip {% endif %}">
-                                                <input type="checkbox"
-                                                       class="form-check-input flex-shrink-0"
-                                                       id="checkbox_{{ form.instance.id }}"
-                                                       name="done_{{ form.instance.id }}"
-                                                       {% if form.instance.done_for_branch %} checked disabled {% endif %}/>
+                                    data-bs-toggle="tooltip" data-bs-placement="top" title="Done"
+                                {% endif %}>
+                                    <td>
+                                        <div class="d-flex justify-content-center responsive__mobile-2">
+                                            <div class="form-check">
+                                                <div class="checkbox-wrapper {% if form.instance.done_for_branch %} checked-tooltip {% endif %}">
+                                                    <input type="checkbox"
+                                                           class="form-check-input flex-shrink-0"
+                                                           id="checkbox_{{ form.instance.id }}"
+                                                           name="done_{{ form.instance.id }}"
+                                                            {% if form.instance.done_for_branch %} checked
+                                                           disabled {% endif %}/>
+                                                </div>
+
                                             </div>
-
+                                            <input type="number" name="id"
+                                                   value="{{ form.instance.id }}"
+                                                   style="display: none;"/>
                                         </div>
-                                        <input type="number" name="id"
-                                               value="{{ form.instance.id }}"
-                                               style="display: none;"/>
-                                    </div>
-                                </td>
+                                    </td>
 
-                                <td>
-                                    <div class="d-flex px-1 py-1">
-                                        <h6 class="mb-0 text-sm responsive__mobile-3">
-                                            {{ form.instance.title }}
-                                        </h6>
-                                    </div>
-                                    <div class="d-flex">
-                                        <small class="d-block px-1 text-xs opacity-7 responsive__mobile-3">
+                                    <td>
+                                        <div class="d-flex px-1 py-1">
+                                            <h6 class="mb-0 text-sm responsive__mobile-3">
+                                                {{ form.instance.title }}
+                                            </h6>
+                                        </div>
+                                        <div class="d-flex">
+                                            <small class="d-block px-1 text-xs opacity-7 responsive__mobile-3">
                                             <span data-feather="tag" class="align-text-bottom"
                                                   style="height: 16px"></span>
-                                            {{ form.instance.get_types|join:", " }}
-                                            {% if form.instance.assignees %}
-                                                <!-- <br class="responsive__break" style="display: none;"> -->
-                                            <span data-feather="user" class="align-text-bottom"
-                                                  style="height: 16px"></span>
-                                            {{ form.instance.assignees }}
-                                            {% endif %}
-                                        </small>
-                                    </div>
-                                    {% if form.instance.summary %}
-                                        <div class="d-flex text-sm px-1 py-1 align-items-center no-select descriptionLink">
-
-                                            <span class="" data-feather="chevron-right"></span>
-                                            Description
-
-                                            <span class="hidden">{{ form.instance.summary }}</span>
+                                                {{ form.instance.get_types|join:", " }}
+                                                {% if form.instance.assignees %}
+                                                    <!-- <br class="responsive__break" style="display: none;"> -->
+                                                    <span data-feather="user" class="align-text-bottom"
+                                                          style="height: 16px"></span>
+                                                    {{ form.instance.assignees }}
+                                                {% endif %}
+                                            </small>
                                         </div>
-                                                                    {% endif %}
-                                    <!-- Inside your for loop for each task -->
-                                    <div class="ml-4 card rounded-0 task-description" style="display: none;"></div>
-                                </td>
-                            </tr>
+                                        {% if form.instance.summary %}
+                                            <div class="d-flex text-sm px-1 py-1 align-items-center no-select descriptionLink">
+
+                                                <span class="" data-feather="chevron-right"></span>
+                                                Description
+
+                                                <span class="hidden">{{ form.instance.summary }}</span>
+                                            </div>
+                                        {% endif %}
+                                        <!-- Inside your for loop for each task -->
+                                        <div class="ml-4 card rounded-0 task-description" style="display: none;"></div>
+                                    </td>
+                                </tr>
                             {% endif %}
                             {% endfor %}
                             </tbody>
@@ -113,7 +114,11 @@
                     </div>
                 </div>
             </div>
-            <input type="submit" id="submitTasksBtn" class="w-100 btn bg-gradient-primary" value="Submit tasks" style="float: right; max-width: 200px;"/>
+            {% if branch != "All" %}
+                <input type="submit" id="submitTasksBtn" class="w-100 btn bg-gradient-primary" value="Submit tasks" style="float: right; max-width: 200px;"/>
+            {% else %}
+                <p class="d-flex justify-content-end px-1 text-xs opacity-7 responsive__mobile-3">Please select your working branch to submit a task</p>
+            {% endif %}
         </div>
     </div>
 </form>
